<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Name -->
    <string name="app_name">Asclepius</string>

    <!-- Labels -->
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="result">Analysis Result</string>
    <string name="results">Result</string>
    <string name="save_classification">Save</string>
    <string name="delete">Delete</string>
    <string name="savedimg" />
    <string name="news" />
    <string name="preview" />

    <!-- Image Classifier and Result Messages -->
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="empty_image_warning" />
    <string name="result_image_description">Image displaying the result</string>
    <string name="result_image" />
    <string name="result_text">%1$s %2$s</string>

    <!-- Camera and Cropping -->
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="crop_image">Crop Picture</string>
    <string name="crop_failed">Failed to Crop</string>

    <!-- History and Prediction -->
    <string name="history">History</string>
    <string name="no_history_found">No History Available</string>
    <string name="history_image_desc">Image Description</string>
    <string name="prediction_result">Prediction Result</string>
    <string name="confidence_score">Confidence Score</string>
    <string name="cancerOrNonCancer">Cancer|NonCancer</string>
    <string name="score">10%</string>

    <!-- Inference -->
    <string name="inference_time_text">%1$d ms</string>

    <!-- News Section -->
    <string name="berita">News</string>
    <string name="titleNews">News Title</string>
    <string name="descriptionNews">News Description</string>
    <string name="link">Read</string>
    <string name="title_activity_news">NewsActivity</string>

    <!-- Fragments -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <!-- Navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Home Section -->
    <string name="home">Home</string>
    <string name="welcome_to_home" />
    <string name="deleted">Delete</string>
    <string name="save">Save</string>

    <!-- Placeholder Text -->
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="read_more">Read more...</string>
    <string name="saving">Save</string>
</resources>
